fixed spacing

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -14,4 +14,5 @@
 
 .aboutPic {
     width: 50vw;
+    padding-block: 10px;
 }
